# CVAsgmt

./: .gitignore  CMakeLists.txt  README.md
public/: index.html
public/asgmt/1/: index.html
public/asgmt/2/: index.html
public/js/: app.js
py/: test.py
src/: app.cpp  utils.hpp
src/asgmt/: asgmt1.hpp  asgmt2.hpp
src/server/: base64.hpp  server.hpp  server_base.hpp
tex/asgmt1/: asgmt1.tex
tex/asgmt3/: asgmt3.tex
tex/asgmt3/fig/: res1.tex  svm1.tex  svm2.tex
tex/asgmt3/sec/: abstract.tex  dataset.tex  ds.tex  introduction.tex  kmeans.tex  result.tex  sift.tex  svm.tex
views/: 404.html
